fixing the loadblance IP

--- a/src/main/resources/public/timeout.html
+++ b/src/main/resources/public/timeout.html
@@ -7,7 +7,7 @@
 </head>
 <body >
 	<div class="container text-center">
-		<a href="http://localhost:8179/login.html" >You session is completed - click to relogin</a>
+		<a href="http://143.47.107.210:8080/login.html" >You session is completed - click to relogin</a>
 	</div>
 	<div class="container"></div>
 	
